Fixed #2540 #2544